Style header and fix email alignment

--- a/app/assets/stylesheets/content.scss
+++ b/app/assets/stylesheets/content.scss
@@ -1,6 +1,6 @@
 .outer-header {
   border-bottom: 1px solid #ddd;
-  z-index: 10;
+  // z-index: 10;
 }
 
 .header {
@@ -8,14 +8,67 @@
   justify-content: center;
   align-items: center;
   line-height: 52px;
+  max-height: 53px;
+  box-sizing: border-box;
+  // margin: 0 auto;
+}
+
+div.header-contents {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  // width: 100%;
+  // padding-left: 88px;
+  box-sizing: border-box;
+}
+
+div.header-nav {
+  display: flex;
+  align-items: center;
+  padding: 0 8px;
+  line-height: 52px;
+}
+
+.header-nav > * {
+  display: flex;
+  align-items: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  border-bottom: 2px solid transparent;
+  padding: 0 14px;
+  box-sizing: border-box;
+}
+
+.header-nav > * > * {
+
+}
+
+.nav-item-icon svg {
+  width: 24px;
+  height: 23px;
+  display: inline-block;
+  margin-right: 4px;
+  margin-bottom: -6px;
+  background-size: contain;
+
 
 }
 
 nav > h2.logo {
-  width: 80px;
-  min-height: 50px;
-  font-size: 30px;
+  // display: inline-block;
+  width: 85px;
+  height: 50px;
+  font-size: 27px;
   text-align: center;
-  // align-self: center;
   vertical-align: middle;
+  position: relative;
+  z-index: 1;
+}
+
+.active-nav {
+  color: #b92b27;
+  --icon_color: #b92b27;
+  border-color: #b92b27;
+  opacity: 1;
+
 }
